-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.12.5, 5.13.1
-
Fix Version/s: 5.14.1, 5.15.0 Alpha
-
Component/s: GUI: Text handling, Widgets: Widgets and Dialogs
-
Labels:
-
Commits:29adc0eed9b9dc3cce92f8acaaeaed3ab1bc6414 (qt/qtbase/5.14)
Steps to reproduce:
- In the editor highlight a text from left to right (keyboard or mouse)
- Delete the text
- Press Up or Down Arrow.
Expected behavior:
Cursor to be moved directly up or down.
Actual behavior:
Cursor moves to the new line to the position where the highlighted text was prior to being deleted.
For Gerrit Dashboard: QTBUG-78479 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
283876,5 | Fix updating the text cursor position after editing | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |